# adventofcode

./: .env  .gitignore  .pre-commit-config.yaml  README.md  helpers.py  pyproject.toml  template.py
2022/01/: main.py
2022/02/: main.py
2022/03/: main.py
2022/04/: main.py
2022/05/: main.py
2022/06/: main.py
2022/07/: main.py
2022/08/: main.py
2022/09/: main.py
2022/10/: main.py
2022/11/: main.py
2022/12/: main.py
2022/13/: main.py
2022/14/: main.py
2022/15/: main.py
2022/16/: main.py
2022/17/: main.py
2022/18/: main.py
2022/19/: main.py
2022/20/: main.py  test.txt
2022/21/: main.py
2022/22/: main.py
2022/23/: main.py
2022/24/: main.py
2022/25/: main.py
2023/01/: main.py
2023/02/: main.py
2023/03/: main.py
2023/04/: main.py
2023/05/: main.py
2023/06/: main.py
2023/07/: main.py
2023/08/: main.py
2023/09/: main.py
2023/10/: main.py
2023/11/: main.py
2023/12/: main.py
2023/13/: main.py
2023/14/: main.py
2023/15/: main.py
2023/16/: main.py
2023/17/: main.py
2023/18/: main.py
2023/19/: main.py
2023/20/: main.py
2023/21/: main.py
2023/22/: main.py
2023/23/: main.py
2023/24/: main.py
2023/25/: main.py
src/: helpers.py  template.py  template.txt
src/y2022/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
src/y2023/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  (+19 more)
tests/: test_2022.py  test_2023.py  test_2024.py  test_2025.py
(+37 files in other folders)
