[project]
name = "adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.4.2",
    "ortools>=9.11.4210",
    "sympy>=1.13.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
]
